--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
-    <script src="./script.js"></script>
     <title>Conversordemoedas</title>
 </head>
 
@@ -39,16 +38,16 @@
 
         <label class="label-valor">
             valor:
-            <input placeholder="R$ 10.000,00">
+            <input class="input-currency" placeholder="R$ 10.000,00">
         </label>
 
-        <button>Converter</button>
+        <button class="convert-button">Converter</button>
 
         <section>
             <div class="currency-box">
                 <img src="./assets/brasil 2.png" alt="logo-moeda-converter">
                 <p class="currency">Real</p>
-                <p class="currency-value">R$ 0,00</p>
+                <p class="currency-value-to-convert">R$ 0,00</p>
             </div>
 
             <img class="arrow-img" src ="./assets/Vector.png" alt="seta-conversor">
@@ -86,5 +85,5 @@
     </main>
 
 </body>
-
+<script src="./script.js"></script>
 </html>
