--- a/index.html
+++ b/index.html
@@ -21,18 +21,16 @@
                 <option>US$ Dólar americano</option>
                 <option>€ Euro</option>
                 <option>£ Libra</option>
-                <option>฿ Bitcoin</option>
             </select>
         </label>
 
         <label class="label-2">
             Converter<b>para:</b>
-            <select>
-                <option>US$ Dólar americano</option>
-                <option>R$ Real Brasileiro</option>
-                <option>€ Euro</option>
-                <option>£ Libra</option>
-                <option>฿ Bitcoin</option>
+            <select class="currency-select">
+                <option value="dolar">US$ Dólar americano</option>
+                <option value="real">R$ Real Brasileiro</option>
+                <option value="euro">€ Euro</option>
+                <option value="libra">£ Libra</option>
             </select>
         </label>
 
@@ -53,34 +51,11 @@
             <img class="arrow-img" src ="./assets/Vector.png" alt="seta-conversor">
 
             <div class="currency-box">
-                <img src="./assets/estados-unidos (1) 1.png" alt="logo-dolar-convertida">
-                <p class="currency">Dólar</p>
+                <img class="currency-image" src="./assets/estados-unidos (1) 1.png" alt="logo-dolar-convertida">
+                <p class="currency" id="currency-dolar">Dólar</p>
                 <p class="currency-value">US$ 0,00</p>
             </div>
 
-            <div class="currency-box">
-                <img src="./assets/Euro.png" alt="logo-euro-convertida">
-                <p class="currency">Euro</p>
-                <p class="currency-value">€ 0,00</p>
-            </div>
-
-            <div class="currency-box">
-                <img src="./assets/brasil 2.png" alt="logo-real-convertida">
-                <p class="currency">Real</p>
-                <p class="currency-value">R$ 0,00</p>
-            </div>
-
-            <div class="currency-box">
-                <img src="./assets/libra 1.png" alt="logo-Libra-convertida">
-                <p class="currency">Libra</p>
-                <p class="currency-value">£ 0,00</p>
-            </div>
-
-            <div class="currency-box">
-                <img src="./assets/bitcoin 1.png" alt="logo-Bitcoin-convertida">
-                <p class="currency">Bitcoin</p>
-                <p class="currency-value">฿ 0,00</p>
-            </div>
         </section>
     </main>
 
