--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             Converter<b>de:</b>
             <select>
                 <option>R$ Real Brasileiro</option>
-                <option>US$ Dólar americano</option>
+                <option>US$ Dólar Americano</option>
                 <option>€ Euro</option>
                 <option>£ Libra</option>
             </select>
@@ -27,7 +27,7 @@
         <label class="label-2">
             Converter<b>para:</b>
             <select class="currency-select">
-                <option value="dolar">US$ Dólar americano</option>
+                <option value="dolar">US$ Dólar Americano</option>
                 <option value="real">R$ Real Brasileiro</option>
                 <option value="euro">€ Euro</option>
                 <option value="libra">£ Libra</option>
@@ -52,7 +52,7 @@
 
             <div class="currency-box">
                 <img class="currency-image" src="./assets/estados-unidos (1) 1.png" alt="logo-dolar-convertida">
-                <p class="currency" id="currency-dolar">Dólar</p>
+                <p class="currency" id="currency-dolar">Dólar </p>
                 <p class="currency-value">US$ 0,00</p>
             </div>
 
