--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <label class="label-1">
             Converter<b>de:</b>
             <select>
-                <option>R$ Real Brasileiro</option>
-                <option>US$ Dólar Americano</option>
-                <option>€ Euro</option>
-                <option>£ Libra</option>
+                <option value="real">R$ Real Brasileiro</option>
+                <option value="dolar">US$ Dólar Americano</option>
+                <option value="euro">€ Euro</option>
+                <option value="libra">£ Libra</option>
             </select>
         </label>
 
